propfuzz/tests/compile-fail/bad-args.stderr
error: expected integer
 --> $DIR/bad-args.rs:9:20
  |
9 | #[propfuzz(cases = true, fork = 1024)]
  |                    ^^^^

error: expected bool
 --> $DIR/bad-args.rs:9:33
  |
9 | #[propfuzz(cases = true, fork = 1024)]
  |                                 ^^^^

error: key specified more than once
  --> $DIR/bad-args.rs:13:26
   |
13 | #[propfuzz(cases = 1024, cases = 2048)]
   |                          ^^^^^

error: #[propfuzz] requires a description as a doc comment
  --> $DIR/bad-args.rs:20:1
   |
20 | fn repeated2(_: Vec<u8>) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: key specified more than once
  --> $DIR/bad-args.rs:19:12
   |
19 | #[propfuzz(cases = 2048)]
   |            ^^^^^

error: argument not recognized
  --> $DIR/bad-args.rs:24:12
   |
24 | #[propfuzz(wat)]
   |            ^^^

error: expected parentheses: #[propfuzz(...)]
  --> $DIR/bad-args.rs:25:12
   |
25 | #[propfuzz = "wat"]
   |            ^

error: key specified more than once
  --> $DIR/bad-args.rs:30:12
   |
30 | #[propfuzz(cases = 512)]
   |            ^^^^^

error: key specified more than once
  --> $DIR/bad-args.rs:33:16
   |
33 |     #[propfuzz(strategy = "any::<u8>()")]
   |                ^^^^^^^^
